# AspenHalls

./: .clippy.toml  .env  .gitignore  .gitmodules  Cargo.toml  Cranky.toml  LICENSE  LICENSE.md  Makefile.toml  README  README.md  STYLE_GUIDE.md  _config.yml  build.rs  cargo_publish_msvc.sh  clippy.toml  config.toml  gameuimockup.png~  icon.res  release.toml  rust-toolchain.toml  rustfmt.toml  taplo.toml  trace  trunkchmod  vanillacoffee_pallete.aseprite  zappschedule.dot  zrendergraph.dot  zrenderschedule.dot  zschedulegraph.dot
.cargo/: config.toml
.github/workflows/: build-android.yml  build.yml  ci.yml  itch.yml  release-gh-pages.yml  release-itch-html.yml
.trunk/: .gitignore  trunk.yaml
.trunk/configs/: clippy.toml
assets/: testing_tiled.tiled-session
assets/fonts/: FantasqueSansMonoNF.json  FantasqueSansMonoNF.kayak_font
assets/init/: default_cursor.aseprite  pack.registry
assets/levels/: coltest.ldtk  homeworld.ldtk  ldtkapitest.ldtk  ldtktestlevel.ldtk  level1.ldtk  (+4 more)
crates/aspenlib/: Cargo.toml
crates/aspenlib/src/: ahp.rs  bundles.rs  consts.rs  lib.rs  prelude.rs
crates/aspenlib/src/console/: command_systems.rs  commands.rs  mod.rs  systems.rs
crates/aspenlib/src/debug/: debug_dirs.rs  mod.rs
crates/aspenlib/src/game/: animations.rs  attributes_stats.rs  audio.rs  components.rs  mod.rs
crates/aspenlib/src/game/actors/: animation.rs  attributes_stats.rs  components.rs  mod.rs
crates/aspenlib/src/game/actors/ai/: components.rs  mod.rs  stupid_ai.rs  utility.rs
crates/aspenlib/src/game/actors/combat/: attacks.rs  components.rs  hit_detection.rs  mod.rs
crates/aspenlib/src/game/actors/enemies/: mod.rs
crates/aspenlib/src/game/actors/enemies/skeleton/: mod.rs
crates/aspenlib/src/game/actors/player/: actions.rs  mod.rs  movement.rs
crates/aspenlib/src/game/actors/spawners/: components.rs  mod.rs  spawn_functions_enemy.rs  spawn_functions_weapons.rs
crates/aspenlib/src/game/characters/: character_spawner.rs  components.rs  mod.rs  utils.rs
crates/aspenlib/src/game/characters/ai/: components.rs  mod.rs  skillsusing_ai.rs  stupid_ai.rs
crates/aspenlib/src/game/characters/boss/: mod.rs
crates/aspenlib/src/game/characters/creeps/: mod.rs
crates/aspenlib/src/game/characters/player/: actions.rs  mod.rs  movement.rs
crates/aspenlib/src/game/combat/: mod.rs  unarmed.rs
crates/aspenlib/src/game/game_world/: collisions.rs  components.rs  ldtk_bundles.rs  mod.rs  progress.rs
crates/aspenlib/src/game/game_world/dungeonator_v2/: components.rs  mod.rs  path_map.rs  room_database.rs  rooms.rs  tile_graph.rs  utils.rs
crates/aspenlib/src/game/game_world/dungeonator_v2/hallways/: hallway_builder.rs  mod.rs  walls.rs
crates/aspenlib/src/game/game_world/dungeonator_v2/room_graph/: impl.rs  mod.rs
crates/aspenlib/src/game/game_world/dungeonator_v2/tile_graph/: impl.rs  mod.rs
crates/aspenlib/src/game/game_world/hideout/: mod.rs  systems.rs
crates/aspenlib/src/game/game_world/world_objects/: decode_instance.rs  mod.rs
crates/aspenlib/src/game/game_world/world_objects/systems/: character_spawner.rs  mod.rs
crates/aspenlib/src/game/input/: action_maps.rs  actor_targeting.rs  mod.rs  software_cursor.rs
crates/aspenlib/src/game/input/kbm/: mod.rs
crates/aspenlib/src/game/input/touch/: mod.rs
crates/aspenlib/src/game/input/touch_gamepad/: mod.rs  shunts.rs
crates/aspenlib/src/game/interface/: mod.rs  ui_widgets.rs
crates/aspenlib/src/game/interface/pause_menu/: mod.rs
crates/aspenlib/src/game/interface/playing_ui/: action_buttons.rs  boss_hud.rs  gun_hud.rs  mod.rs  stat_hud.rs
crates/aspenlib/src/game/interface/settings_menu/: mod.rs
crates/aspenlib/src/game/interface/start_menu/: mod.rs
crates/aspenlib/src/game/items/: components.rs  item_spawner.rs  mod.rs
crates/aspenlib/src/game/items/weapons/: components.rs  hit_detection.rs  mod.rs  utils.rs
crates/aspenlib/src/game/items/weapons/forms/: gun.rs  mod.rs
crates/aspenlib/src/game_tools/: debug_dirs.rs  mod.rs
crates/aspenlib/src/loading/: assets.rs  mod.rs  splashscreen.rs
crates/aspenlib/src/loading/config/: mod.rs
crates/aspenlib/src/loading/custom_assets/: actor_definitions.rs  background_shader.rs  mod.rs  npc_definition.rs
crates/aspenlib/src/loading/registry/: mod.rs  reg_impl.rs  utils.rs
crates/aspenlib/src/utilities/: mod.rs
crates/aspenlib/src/utilities/.unused_utils/: lens.rs
crates/aspenlib/src/utilities/.unused_utils/dungeonator_v1/: delauny.rs  generator.rs  hallways.rs
crates/aspenlib/src/utilities/.unused_utils/locale/: asset.rs
crates/desktop/: Cargo.toml  Makefile.toml
crates/desktop/src/: main.rs
crates/mobile/: Cargo.toml  Makefile.toml  debug_android.sh
crates/mobile/android/: config.gradle  gradle.properties  update_version.sh
crates/mobile/android/gradle/wrapper/: gradle-wrapper.properties
crates/mobile/android/src/com/hellzbellz123/aspen_halls/: MainActivity.kt
crates/mobile/src/: lib.rs
crates/wasm/: Cargo.toml  Makefile.toml  Trunk.toml  index.html
crates/wasm/src/: main.rs
data/: registery.assets
deps_inhouse/bevy_mod_logfu/: Cargo.toml
deps_inhouse/bevy_mod_logfu/src/: android_tracing.rs  lib.rs
examples/: test.rs
gamedata/: registery.assets  registry.assets
launchers/mobile/: Cargo.toml  Makefile.toml  debug_android.sh  rust-toolchain.toml
launchers/mobile/android/: AndroidManifest.xml  build.gradle  config.gradle  gradle.properties
launchers/mobile/android/src/com/hellzbellz123/aspen_halls/: MainActivity.kt
launchers/mobile/src/: lib.rs
launchers/native/: Cargo.toml  Makefile.toml
launchers/native/src/: main.rs
launchers/wasm/: Cargo.toml  Makefile.toml  index.html  main.scss
launchers/wasm/src/: main.rs
src/: actions.rs  ahp.rs  ahprelude.rs  audio.rs  bundles.rs  consts.rs  game.rs  lib.rs  loading.rs  main.rs  menu.bakup  menu.rs  player.rs  splashscreen.rs  stallarspace.rs  ui.rs  utilities.rs  window_icon.rs
srcold/: main.rs
timings/: cargo-timing-20220901T210605Z.html
tools/: FlicFlac.ini  adb-connecter.sh  check  profiles.toml  purr  rogcat-wrapper
(+381 files in other folders)
