[package]
name = "aspen_lib"
version = "0.0.1"
edition = "2021"
authors = ["Hellzbellz123 (Taylor Smith)"]
description = "Aspen Halls: in progress"
documentation = "https://github.com/Hellzbellz123/AspenHalls/blob/main/README.md"
homepage = "https://hellzbellz123.github.io/AspenHalls/"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Hellzbellz123/VanillaCoffee/"
keywords = [
  "videogame",
  "game",
  "application",
  "bin",
]
categories = ["games"]

[workspace]
resolver = "2"
exclude = ["deps", "deps_broke"]
default-members = ["launchers/native/"]
members = [
  "launchers/wasm",
  "launchers/native",
  "launchers/mobile",
  "deps_inhouse/bevy_mod_logfu",
]

[lib]
crate-type = ["cdylib", "rlib"]

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# [profile.dev.package."*"]
# codegen-units = 32
# incremental = false
# opt-level = 3

# Enable a small amount of optimization in debug mode
[profile.dev]
codegen-units = 256
opt-level = 1
incremental = true
lto = "thin"

[profile.release]
debug = true
codegen-units = 1
opt-level = 'z'
lto = "fat"

[workspace.dependencies]
log = "0.4.20"
bevy = { path = "deps/bevy", default-features = false, features = [
  "bevy_pbr",   # bevy_pbr / bevy_asset / bevy_render / bevy_core_pipeline
  "bevy_ui",    # bevy_ui / bevy_text / bevy_sprite / bevy_core_pipeline
  "bevy_winit", # Support for creating windows
  "x11",        # Support Linux x11 windowing system
  # wayland feature currently breaks app startup loop, causing infinite hang
  # i am unsure as too why, it seems related too mangohud but disabling mangohud via env does not fix the issue
  # "wayland",                  # Support Linux Wayland windowing system
  "png",              # png is my preffered image format
  "serialize",        # Support for `serde` Serialize/Deserialize
  "tonemapping_luts", # extra tonemapping utils requires ktx2 & zstd
  "ktx2",             # gpu friendly texture format
  "zstd",             # zstd is for ktx2 compression
  # "bevy_gilrs",             # Gamepad input support
  # "subpixel_glyph_atlas",   # Subpixel antialiasing for text/fonts
  # "bevy_gizmos",            # bevy gizmos for linedrawing, not used yet?
  # "bevy_scene",             # scenes are unused atm
] }

[features]
inspect = [
  "dep:bevy-inspector-egui",
  "dep:bevy_egui",
]
trace = [
  # taplo collapeses this
  "bevy_mod_logfu/trace_tracy",
  "bevy_mod_logfu/trace_tracy_memory",
]

[target.'cfg(not(any(target_family = "wasm", target_os = "android", target_os = "ios")))'.dependencies]
bevy = { workspace = true, features = [
  "dynamic_linking",
  "filesystem_watcher",
] }

[target.'cfg(target_os = "android")'.dependencies]
bevy = { workspace = true, features = [
  "android_shared_stdcxx", # this is for cpal/oboe
] }

[target.'cfg(target_family = "wasm")'.dependencies]
bevy = { workspace = true, features = [
  "webgl2", # this is for cpal/oboe
] }

[build-dependencies]
embed-resource = "2.3.0"

[dependencies]
lazy_static = { version = "1.4.0" }
rand = { version = "0.8" }
log = { workspace = true }
serde = { version = "1.0" }
strum = { version = "0.25.0", features = [
  "derive",
  "std",
  "strum_macros",
] }
toml = { version = "0.8.0" }
winit = { version = "0.28", default-features = false, features = [
  "x11",
  # see above comments about bevy/wayland feature
  # "wayland"
] }
clap = { version = "4.2" }
image = { version = "0.24", default_features = false, features = [
  "png",
] }
voronator = { version = "0.2" }
petgraph = { version = "0.6" }
num-integer = { version = "0.1" }
bevy = { workspace = true }

# personal bevy plugins
bevy_mod_logfu = { path = "deps_inhouse/bevy_mod_logfu" }
# bevy_mod_mobiletouchpad = { path = "deps_inhouse/bevy_mod_mobile_touchpad" }
# TODO: move the virtual touchpad into a reuseable bevy plugin
# so other people can just throw it in and use it

# Bevy Dependencies are located in deps folder
big-brain = { path = "deps/big_brain" }
leafwing-input-manager = { path = "deps/leafwing_input_manager" }
seldom_map_nav = { path = "deps/seldom_map_nav", features = [
  "bevy",
] }
virtual_joystick = { path = "deps/virtual_joystick" }
belly = { path = "deps/belly" }
bevy_console = { path = "deps/bevy_console" }
bevy-inspector-egui = { path = "deps/bevy_inspector_egui/crates/bevy-inspector-egui", optional = true }
bevy_common_assets = { path = "deps/bevy_common_assets", features = [
  "ron",
] }
bevy_ecs_ldtk = { path = "deps/bevy_ecs_ldtk", features = [
  "atlas",
  "external_levels",
] }
bevy_ecs_tilemap = { path = "deps/bevy_ecs_tilemap", features = [
  "render",
] }
bevy_framepace = { path = "deps/bevy_framepace" }
bevy_prototype_lyon = { path = "deps/bevy_prototype_lyon" }
bevy_rapier2d = { path = "deps/bevy_rapier/bevy_rapier2d" }
bevy_tiling_background = { path = "deps/bevy_tiling_background" }
bevy_egui = { path = "deps/bevy_egui", optional = true, default-features = false, features = [
  "default_fonts",
  "serde",
] }
bevy_asset_loader = { path = "deps/bevy_asset_loader/bevy_asset_loader", features = [
  "2d",
  "standard_dynamic_assets",
] }
bevy_kira_audio = { path = "deps/bevy_kira_audio", default-features = false, features = [
  "ogg",
] }
bevy_mod_debugdump = { path = "deps/bevy_mod_debugdump", features = [
  "render_graph",
] }
bevy-debug-text-overlay = { path = "deps/bevy_debug_text_overlay", default-features = false, features = [
  "builtin-font",
] }

###### Unused dependencies #######
# bevy_mouse_tracking_plugin = { path = "deps/bevy_mouse_tracking"}
# iyes_progress = {path = "deps/iyes_progress"}
# bevy_sprite3d = {path = "deps/bevy_sprite3d"}
# bevy_eventlistener = {path = "deps/bevy_eventlistener"}
# bevy_mod_picking = {path = "deps/bevy_mod_picking", default-features = false, features = [
#     "all"
# ]}
# bevy_tweening = {path = "deps/bevy_tweening", default-features = false, features = [
#     "bevy_text",
# ]}

[patch.crates-io]
# broken dependencies
typid = { path = "deps_broke/typid" } # typid doesnt compile on web with crates version, updated uuid dependency and it works

# bevy addon local replacements
bevy_ecs_tilemap = { path = "deps/bevy_ecs_tilemap" }
bevy_egui = { path = "deps/bevy_egui" }
bevy_common_assets = { path = "deps/bevy_common_assets" }
bevy_ecs_ldtk_macros = { path = "deps/bevy_ecs_ldtk/macros" }

# unused patches atm
# iyes_progress = {path = "deps/iyes_progress"}
# bevy_dynamic_plugin = {path = "deps/bevy/crates/bevy_dynamic_plugin"}
# bevy_animation = {path = "deps/bevy/crates/bevy_animation"}
# bevy_audio = {path = "deps/bevy/crates/bevy_audio"}
# bevy_gltf = {path = "deps/bevy/crates/bevy_gltf"}

# Replace bevy core crates with local copy for ALL crates that use them
bevy = { workspace = true, path = "deps/bevy" }
bevy_a11y = { path = "deps/bevy/crates/bevy_a11y" }
bevy_app = { path = "deps/bevy/crates/bevy_app" }
bevy_asset = { path = "deps/bevy/crates/bevy_asset" }
bevy_core = { path = "deps/bevy/crates/bevy_core" }
bevy_core_pipeline = { path = "deps/bevy/crates/bevy_core_pipeline" }
bevy_derive = { path = "deps/bevy/crates/bevy_derive" }
bevy_diagnostic = { path = "deps/bevy/crates/bevy_diagnostic" }
bevy_dylib = { path = "deps/bevy/crates/bevy_dylib" }
bevy_ecs = { path = "deps/bevy/crates/bevy_ecs" }
bevy_encase_derive = { path = "deps/bevy/crates/bevy_encase_derive" }
bevy_gilrs = { path = "deps/bevy/crates/bevy_gilrs" }
bevy_gizmos = { path = "deps/bevy/crates/bevy_gizmos" }
bevy_hierarchy = { path = "deps/bevy/crates/bevy_hierarchy" }
bevy_input = { path = "deps/bevy/crates/bevy_input" }
bevy_internal = { path = "deps/bevy/crates/bevy_internal" }
bevy_log = { path = "deps/bevy/crates/bevy_log" }
bevy_macro_utils = { path = "deps/bevy/crates/bevy_macro_utils" }
bevy_math = { path = "deps/bevy/crates/bevy_math" }
bevy_mikktspace = { path = "deps/bevy/crates/bevy_mikktspace" }
bevy_pbr = { path = "deps/bevy/crates/bevy_pbr" }
bevy_ptr = { path = "deps/bevy/crates/bevy_ptr" }
bevy_reflect = { path = "deps/bevy/crates/bevy_reflect" }
bevy_render = { path = "deps/bevy/crates/bevy_render" }
bevy_scene = { path = "deps/bevy/crates/bevy_scene" }
bevy_sprite = { path = "deps/bevy/crates/bevy_sprite" }
bevy_tasks = { path = "deps/bevy/crates/bevy_tasks" }
bevy_text = { path = "deps/bevy/crates/bevy_text" }
bevy_time = { path = "deps/bevy/crates/bevy_time" }
bevy_transform = { path = "deps/bevy/crates/bevy_transform" }
bevy_ui = { path = "deps/bevy/crates/bevy_ui" }
bevy_utils = { path = "deps/bevy/crates/bevy_utils" }
bevy_window = { path = "deps/bevy/crates/bevy_window" }
bevy_winit = { path = "deps/bevy/crates/bevy_winit" }
